# signal-processing

./: .gitignore  Makefile  README.md  VALIDATION.md  metadata_example.csv  metadata_template.csv  project_details.md  pyproject.toml  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml
Python/: 01_preprocess.py  02_iceemdan.py  03_maiw_weighting.py  04_wavelet_denoise.py  README.md  config.json  config_utils.py  diagnose_decomposition.py  iceemdan.py  maiw_weighting.py  optimized_params.txt  pipeline_monitor.py  run_pipeline.py  test_three_files.py  visualize_pipeline.py  visualize_preprocess.py  wavelet_denoise.py
configs/: research_fast.json  research_physics.json  test.json
presentation files/: BUNDLE_SHA256SUMS.txt  START_HERE.html  START_HERE.md
presentation files/01_100_score_acceptance/: run_manifest.json  stage_scorecard.json
presentation files/01_100_score_acceptance/report/: pipeline_report.html  pipeline_report.md
presentation files/02_real_recording_demo/: run_manifest.json  stage_scorecard.json
presentation files/02_real_recording_demo/report/: pipeline_report.html  pipeline_report.md
presentation files/03_real_dataset_validation/: VALIDATION_SUMMARY.md  real_dataset_validation.json
presentation files/04_project_documentation/: README.md  VALIDATION.md  acceptance_requirements.txt  project_details.md
scripts/: compare_baselines.py  evaluate.py  evaluate_dataset.py  evaluate_temporal.py  generate_metadata_template.py  generate_report.py  make_figures.py  run_ablation_and_baselines.py  run_statistics.py  validate_research.py
src/pg_amcd/: __init__.py  baselines.py  cli.py  config.py  decomposition.py  denoising.py  detection.py  evaluation.py  features.py  io.py  metadata.py  models.py  optimization.py  pipeline.py  preprocessing.py  provenance.py  reporting.py  segmentation.py  selfcheck.py  stage_artifacts.py  stage_reporting.py  stage_scoring.py  synthetic.py  tracking.py  validation.py  visualization.py  weighting.py
src/pg_amcd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pg_amcd/cli/: __init__.py  __main__.py  evaluate.py  main.py  run.py  utils.py  validate.py
src/pg_amcd/configs/: default.json
testing/t1/: c_770_005_Clean.mat  c_770_005_IMFs.npz  c_770_005_MAIW.mat  diagnostics_summary.md  s_320_030_Clean.mat  s_320_030_IMFs.npz  s_320_030_MAIW.mat  s_320_040_Clean.mat  s_320_040_IMFs.npz  s_320_040_MAIW.mat
tests/: conftest.py
tests/fixtures/: .gitkeep
tests/integration/: test_cli.py  test_real_data_detection.py  test_reporting_cli.py
tests/regression/: test_synthetic_signals.py
tests/unit/: test_ablation_runner.py  test_baselines.py  test_cli_run.py  test_cli_utils.py  test_config.py  test_decomposition.py  test_decomposition_edge_contracts.py  test_denoising.py  test_detection.py  test_evaluation.py  test_features.py  test_io.py  test_metadata.py  test_optimization_edge_contracts.py  test_pipeline.py  test_pipeline_edge_contracts.py  test_preprocessing.py  test_preprocessing_edge_contracts.py  test_provenance.py  test_real_dataset_eval.py  test_reporting.py  test_scientific.py  test_segmentation.py  test_selfcheck.py  test_stage1_scientific_core.py  test_stage234_diagnostics.py  test_stage_artifacts.py  test_stage_reporting.py  test_stage_reporting_edge_contracts.py  test_stage_scoring.py  test_stage_scoring_edge_contracts.py  test_synthetic.py  test_tracking.py  test_validation.py  test_visualization.py  test_weighting.py
(+68 files in other folders)
